--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,186 @@
-.App {
-  text-align: center;
+:root {
+  --lighter-clr: #FEFFFF;
+  --light-clr: #E6E6E6;
+  --primary-clr: #FF5354;
+  --dark-clr: #25273E;
+  --darker-clr: #1F2233;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a{
+  text-decoration: none;
+  color: var(--lighter-clr);
 }
 
-.App-header {
-  background-color: #282c34;
+.background {
+  background-attachment: fixed;
+  background-size: cover;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.circular-photo{
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-photo{
+  width: 250px;
+  height: 300px;
+  object-fit: cover;
+  border: 5px dashed var(--darker-clr);
+  border-radius: 5%;
+}
+
+/* Carousel */
+
+.options{
+  display: flex;
+  flex-flow: column nowrap;
+  background-color: var(--darker-clr);
+  padding: 5%;
+  width: 90%;
+  color: var(--lighter-clr);
+  align-items: center;
+}
+
+.carousel{
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.option{
+  max-width: 20%;
+  padding: 2%;
+}
+
+.option *{
+  padding: 2%;
+  text-align: justify;
+  font-size: 1.32125rem;
+}
+
+.main{
+  font-weight: bold;
+  padding: 5%;
+}
+
+.label{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.option-img{
+  width: 40px;
+  height: 40px;
+}
+
+/* End Carousel */
+
+.about{
+  background-color: var(--dark-clr);
+  padding: 5%;
+  width: 90%;
+  color: var(--lighter-clr);
+  display: flex;
+  justify-content: space-around;
+}
+
+.right{
+  max-width: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.right *{
+  margin: 1%;
+}
+
+.cv{
+  border: 2px solid var(--primary-clr);
+  border-radius: 2%;
+  display: flex;
+  justify-content: space-between;
+  padding: 5% 10%;
+}
+
+.btn{
+  background-color: var(--primary-clr);
+  width: 150px;
+  border-radius: 5%;
+  padding: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  color: var(--lighter-clr);
+  font-weight: bold;
+}
+
+.home{
+  background: url(./images/background.png);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
+.filter{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5%;
+  width: 90%;
+  min-height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.home h1, .about h1{
+  color: var(--primary-clr);
+}
+
+.home p, .about p{
+  color: var(--lighter-clr);
+}
+
+
+/* Animations */
+
+.floating-arrow{
+  animation: arrow 3s 2s infinite;
+  -moz-animation: arrow 3s 2s infinite;
+  -webkit-animation: arrow 3s 2s infinite;
+  -o-animation: arrow 3s 2s infinite;
+}
+
+.floating-arrow-svg{
+  width: 50px;
+  height: 50px;
+}
+
+@keyframes arrow {
+  0% { transform: translateY(30%); }
+  50% { transform: translateY(120%); }
+  100% { transform: translateY(30%); }
+}
+
+@-moz-keyframes arrow {
+}
+
+@-webkit-keyframes arrow {
+}
+
+@-o-keyframes arrow {
 }
