--- a/src/App.css
+++ b/src/App.css
@@ -76,15 +76,25 @@ a{
   padding: 5%;
 }
 
-.label{
+.icon{
   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon:hover + .label, .label:hover{
+  display: flex;
+}
+
+.label{
+  display: none;
   flex-direction: column;
   align-items: center;
 }
 
 .option-img{
-  width: 40px;
-  height: 40px;
+  width: 15vw;
+  height: 15vh;
 }
 
 /* End Carousel */
@@ -177,10 +187,19 @@ a{
 }
 
 @-moz-keyframes arrow {
+  0% { transform: translateY(30%); }
+  50% { transform: translateY(120%); }
+  100% { transform: translateY(30%); }
 }
 
 @-webkit-keyframes arrow {
+  0% { transform: translateY(30%); }
+  50% { transform: translateY(120%); }
+  100% { transform: translateY(30%); }
 }
 
 @-o-keyframes arrow {
+  0% { transform: translateY(30%); }
+  50% { transform: translateY(120%); }
+  100% { transform: translateY(30%); }
 }
