--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,20 @@ a{
   color: var(--lighter-clr);
 }
 
+img {
+  pointer-events: none;
+  -webkit-pointer-events: none;
+  -o-pointer-events: none;
+  -moz-pointer-events: none;
+}
+
+img, h1 {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .background {
   background-attachment: fixed;
   background-size: cover;
@@ -37,8 +51,8 @@ a{
   width: 250px;
   height: 300px;
   object-fit: cover;
-  border: 5px dashed var(--darker-clr);
-  border-radius: 5%;
+  border: 5px solid var(--primary-clr);
+  border-radius: 15px;
 }
 
 /* Carousel */
@@ -67,7 +81,6 @@ a{
 
 .option *{
   padding: 2%;
-  text-align: justify;
   font-size: 1.32125rem;
 }
 
@@ -108,6 +121,10 @@ a{
   justify-content: space-around;
 }
 
+.about > *{
+  margin: 2%;
+}
+
 .right{
   max-width: 60%;
   display: flex;
@@ -120,10 +137,22 @@ a{
 
 .cv{
   border: 2px solid var(--primary-clr);
-  border-radius: 2%;
+  border-radius: 10px;
   display: flex;
   justify-content: space-between;
   padding: 5% 10%;
+}
+
+.cv a{
+  transition: 2s all ease;
+  cursor: pointer;
+}
+
+.cv a:hover {
+  text-shadow:
+    #ffffff 0 0 15px,
+    #ff8d67 0 0 22px,
+    #ffb089 0 0 25px;
 }
 
 .btn{
@@ -169,15 +198,17 @@ a{
 /* Animations */
 
 .floating-arrow{
-  animation: arrow 3s 2s infinite;
-  -moz-animation: arrow 3s 2s infinite;
-  -webkit-animation: arrow 3s 2s infinite;
-  -o-animation: arrow 3s 2s infinite;
+  animation: arrow 3s infinite;
+  -moz-animation: arrow 3s infinite;
+  -webkit-animation: arrow 3s infinite;
+  -o-animation: arrow 3s infinite;
+  width: 10%;
+  height: 10%;
 }
 
 .floating-arrow-svg{
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes arrow {
@@ -203,3 +234,51 @@ a{
   50% { transform: translateY(120%); }
   100% { transform: translateY(30%); }
 }
+
+/* Responsividade */
+
+@media screen and (max-width: 600px) {
+  .about{
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .cv{
+    flex-wrap: wrap;
+  }
+
+  .right{
+    max-width: 90%;
+  }
+
+  .option{
+    min-width: 40%;
+  }
+
+  .option-img{
+    width: 30vw;
+    height: 30vh;
+  }
+}
+
+/* End Responsividade */
+
+/* Start Scrollbar */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+body{
+  overflow: overlay;
+}
+
+/* End Scrollbar */
