--- a/src/App.css
+++ b/src/App.css
@@ -259,7 +259,16 @@ img, h1 {
     width: 30vw;
     height: 30vh;
   }
+  
+  @media screen and (orientation: landscape){
+    .filter{
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+  }
 }
+
 
 /* End Responsividade */
 
