--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ img, h1 {
   width: 250px;
   height: 300px;
   object-fit: cover;
-  border: 5px solid var(--primary-clr);
+  border: 2px solid var(--primary-clr);
   border-radius: 15px;
 }
 
@@ -75,8 +75,11 @@ img, h1 {
 }
 
 .option{
-  max-width: 20%;
+  max-width: 15%;
   padding: 2%;
+  margin: 2%;
+  border: 2px solid var(--primary-clr);
+  border-radius: 15px;
 }
 
 .option *{
@@ -95,19 +98,14 @@ img, h1 {
   justify-content: center;
 }
 
-.icon:hover + .label, .label:hover{
-  display: flex;
-}
-
-.label{
-  display: none;
-  flex-direction: column;
-  align-items: center;
-}
-
 .option-img{
   width: 15vw;
-  height: 15vh;
+  aspect-ratio: 1;
+}
+
+.option-img-fix{
+  background-color: var(--light-clr);
+  border-radius: 50%;
 }
 
 /* End Carousel */
@@ -156,16 +154,21 @@ img, h1 {
 }
 
 .btn{
-  background-color: var(--primary-clr);
+  background-color: var(--dark-clr);
   width: 150px;
-  border-radius: 5%;
+  border-radius: 15px;
   padding: 3%;
   display: flex;
+  border: 2px solid var(--primary-clr);
   align-items: center;
   justify-content: center;
-  border: none;
   color: var(--lighter-clr);
   font-weight: bold;
+}
+
+.btn:hover{
+  background-color: var(--primary-clr);
+
 }
 
 .home{
@@ -184,6 +187,10 @@ img, h1 {
   width: 90%;
   min-height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
+}
+
+.center-info *{
+  text-align: center;
 }
 
 .home h1, .about h1{
@@ -237,6 +244,25 @@ img, h1 {
 
 /* Responsividade */
 
+@media screen and (max-width: 1100px) {
+  .option{
+    max-width: 20%;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .option{
+    min-width: 40%;
+    width: 40%;
+  }
+
+  .option-img{
+    width: 30vw;
+    aspect-ratio: 1;
+  }
+
+}
+
 @media screen and (max-width: 600px) {
   .about{
     flex-wrap: wrap;
@@ -252,12 +278,13 @@ img, h1 {
   }
 
   .option{
-    min-width: 40%;
+    min-width: 100%;
+    width: 100%;
   }
 
   .option-img{
-    width: 30vw;
-    height: 30vh;
+    width: 50vw;
+    aspect-ratio: 1;
   }
   
   @media screen and (orientation: landscape){
@@ -268,7 +295,6 @@ img, h1 {
     }
   }
 }
-
 
 /* End Responsividade */
 
